Update AbstractJavaProjectConfigurator.java
 check --enable-preview flag in ${maven.compiler.enablePreview}